# osm-gimmisn

./: .coveragerc  .eslintrc  .gitignore  .mailmap  .pylintrc  .travis.yml  .yamllint  CHANGELOG.adoc  Cargo.toml  HACKING.adoc  HACKING.md  INSTALL.adoc  INSTALL.md  Makefile  NEWS.adoc  README.adoc  README.md  TODO.adoc  about.hbs  about.toml  accept_language.py  additional_housenumbers.py  additional_streets.py  api.py  area_files.py  areas.py  cache.py  cache_yamls.py  cherry.py  config.py  context.py  cron.py  eslint.config.mjs  get_reference_housenumbers.py  get_reference_streets.py  helpers.py  housenumber-filters-farkasvolgy.yaml  housenumber-filters-hosszuret.yaml  housenumber-filters-madarhegy.yaml  housenumber-filters-magasut.yaml  (+43 more)
.github/workflows/: tests.yml
data/: housenumber-filters-biatorbagy.yaml  housenumber-filters-csilleberc.yaml  housenumber-filters-dobogo.yaml  housenumber-filters-farkasret.yaml  housenumber-filters-farkasvolgy.yaml  housenumber-filters-gazdagret.yaml  housenumber-filters-gellerthegy.yaml  housenumber-filters-hosszuret.yaml  housenumber-filters-kelenfold.yaml  housenumber-filters-krisztinavaros.yaml  housenumber-filters-lagymanyos.yaml  housenumber-filters-madarhegy.yaml  housenumber-filters-magasut.yaml  housenumber-filters-martonhegy.yaml  housenumber-filters-nemetvolgy.yaml  housenumber-filters-ormezo.yaml  housenumber-filters-orsod.yaml  housenumber-filters-posingermajor.yaml  housenumber-filters-sasad.yaml  housenumber-filters-sashegy.yaml  housenumber-filters-spanyolret.yaml  housenumber-filters-szechenyihegy.yaml  housenumber-filters-szentimrevaros.yaml  housenumber-filters-terezvaros.yaml  housenumber-filters-ujbuda.yaml  housenumber-filters.schema.yaml  housenumberless-settlements-hungary.overpassql  matomo.html.template  refcounty-names.yaml  refmegye-names.yaml  refsettlement-names.yaml  reftelepules-names.yaml  relation-adyliget.yaml  relation-agard.yaml  relation-albertfalva.yaml  relation-alsoors.yaml  relation-alsopeteny.yaml  relation-alsorakos.yaml  relation-aquincum.yaml  relation-baja.yaml  (+342 more)
doc/: README.adoc  README.md  refcodes
doc/hu/: README.adoc
guide/: book.toml
guide/src/: README.md  contributors.md  hacking.md  installation.md  news.md  usage.md
po/: osm-gimmisn.pot
po/hu/: osm-gimmisn.po
src/: accept_language.rs  area_files.rs  areas.rs  cache.rs  cache_yamls.rs  context.rs  cron.rs  i18n.rs  lib.rs  main.rs  missing_housenumbers.rs  overpass_query.rs  parse_access_log.rs  ranges.rs  serde.rs  sql.rs  stats.rs  sync_ref.rs  util.rs  validator.rs  version.rs  webframe.rs  wsgi.rs  wsgi_additional.rs  wsgi_json.rs  yattag.rs
src/area_files/: tests.rs
src/areas/: tests.rs
src/browser/: main.ts  stats.ts  types.d.ts
src/cache/: tests.rs
src/cache_yamls/: tests.rs
src/context/: system.rs  tests.rs
src/cron/: tests.rs
src/i18n/: tests.rs
src/missing_housenumbers/: tests.rs
src/overpass_query/: tests.rs
src/parse_access_log/: tests.rs
src/ranges/: tests.rs
src/sql/: tests.rs
src/stats/: tests.rs
src/sync_ref/: tests.rs
src/util/: tests.rs
src/validator/: tests.rs
src/webframe/: tests.rs
src/wsgi/: tests.rs
src/wsgi_additional/: tests.rs
src/wsgi_json/: tests.rs
src/yattag/: tests.rs
static/: chartjs-plugin-trendline.min.js  charts-custom.css  osm.css  osm.js  sorttable.js  stats.js
tests/: config.js  test_accept_language.py  test_areas.py  test_cache.py  test_cache_yamls.py  test_cherry.py  test_config.py  test_context.py  test_cron.py  test_get_reference_housenumbers.py  test_get_reference_streets.py  test_helpers.py  test_i18n.py  test_missing_housenumbers.py  test_missing_streets.py  test_overpass_query.py  test_parse_access_log.py  test_ranges.py  test_stats.py  test_util.py  test_validator.py  test_webframe.py  test_wsgi.py  test_wsgi_additional.py  test_wsgi_json.py  wsgi.ini
tests/data/: matomo.html.template  (+53 more)
tools/: ci-build.sh  dump-deps.sh  issue.sh  read-only.sh  sync-ref.sh  sync-state.sh
workdir/: .gitignore
(+95 files in other folders)
