[package]
name = "osm-gimmisn"
version = "25.2.0"
edition = "2024"
license = "MIT"

[dependencies]
accept-language = "3.1.0"
anyhow = "1.0.98"
clap = "4.5.40"
csv = "1.3.1"
derivative = "2.2.0"
gettext = "0.4.0"
git-version = "0.3.9"
html-escape = "0.2.13"
html_parser = "0.7.0"
isahc = "1.7.2"
lazy_static = "1.5.0"
log = "0.4.27"
once_cell = "1.21.3"
regex = "1.11.1"
rouille = "3.6.2"
rusqlite = { version = "0.36.0", features = ["bundled"] }
rust_icu_ucol = { version = "5.1.0", optional = true }
rust_icu_unumberformatter = { version = "5.1.0", optional = true }
rust_icu_ustring = { version = "5.1.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
time = { version = "0.3.41", features = ["formatting", "macros", "local-offset", "serde-well-known"] }
toml = "0.8.23"
unidecode = "0.3.0"
url = "2.5.4"

[dev-dependencies]
flate2 = "1.1.2"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"

[features]
icu = ["rust_icu_ucol", "rust_icu_ustring", "rust_icu_unumberformatter"]
default = ["icu"]

[profile.symbols]
inherits = "release"
debug = true
