[metadata]
license_file = LICENSE

[flake8]
max-line-length = 120

[mypy]
check_untyped_defs=1
disallow_any_decorated=1
disallow_any_explicit=1
disallow_any_generics=1
disallow_any_unimported=1
disallow_incomplete_defs=1
disallow_subclassing_any=1
disallow_untyped_decorators=1
no_implicit_optional=1
show_column_numbers=1
strict_equality=1
warn_no_return=1
warn_redundant_casts=1
warn_return_any=1
warn_unused_configs=1
warn_unused_ignores=1
